v0/book/content/pages/en/apps/crm.md
{# tocOrder = 1 #}

# CRM

CRM (Customer Relationship Management) is the heart of Hubleto.

In this section, you manage all data about customers, contacts, documents, events, and overall communication. It’s the place where all your relationships and business interactions come together.

**What you’ll find here:**

  * **Customers:** Overview and management of all customers – companies and individuals.
  * **Contacts:** A detailed database of people linked to customers or functioning independently.
  * **Calendar:** Organize meetings, tasks, and events directly in Hubleto.
  * **Documents:** Store and manage files related to customers or projects.
  * **Workflow:** Automate and track work processes.
  * **Mail:** Communicate directly with customers via email, linked to CRM.
  * **Dashboards:** Data visualizations and quick overviews of key metrics.
  * **Reports:** Clear outputs and statistics for decision-making.

**CRM is designed so that you can:**

  * Maintain a central database of customers and contacts.
  * Track interactions and communication.
  * Have all documents and events linked to the right people or companies.
  * Evaluate results using reports and dashboards.

## How to

{% include 'components/table-of-contents-from-pages-folder.twig' with {
  'folder': 'en/apps/crm',
  'maxLevel': 2,
} %}
