v2/book/content/pages/en/apps/crm.md
{# tocOrder = 1 #}

# CRM

{% include 'components/app-group-card.twig' with {
  'borderColor': '#93c5fd',
  'headerColor': '#eff6ff',
  'links': [
    {'page': 'en/apps/crm/customers', 'title': 'Customers'},
    {'page': 'en/apps/crm/contacts', 'title': 'Contacts'},
    {'page': 'en/apps/crm/calendar', 'title': 'Calendar'},
    {'page': 'en/apps/crm/documents', 'title': 'Documents'},
    {'page': 'en/apps/crm/workflow', 'title': 'Workflow'},
    {'page': 'en/apps/crm/mail', 'title': 'Mail'},
    {'page': 'en/apps/crm/tasks', 'title': 'Tasks'},
    {'page': 'en/apps/crm/dashboards', 'title': 'Dashboards'},
  ],
} %}

CRM (Customer Relationship Management) is the heart of Hubleto.

In this section, you manage all data about customers, contacts, documents, events, and overall communication. It’s the place where all your relationships and business interactions come together.

**What you’ll find here:**

  * **Customers:** Overview and management of all customers – companies and individuals.
  * **Contacts:** A detailed database of people linked to customers or functioning independently.
  * **Calendar:** Organize meetings, tasks, and events directly in Hubleto.
  * **Documents:** Store and manage files related to customers or projects.
  * **Workflow:** Automate and track work processes.
  * **Mail:** Communicate directly with customers via email, linked to CRM.
  * **Dashboards:** Data visualizations and quick overviews of key metrics.
  * **Reports:** Clear outputs and statistics for decision-making.

**CRM is designed so that you can:**

  * Maintain a central database of customers and contacts.
  * Track interactions and communication.
  * Have all documents and events linked to the right people or companies.
  * Evaluate results using reports and dashboards.

